===v7.2.1===
====Bug Fixes====
 * Fixed incorrect DR categories after changes made to DRData-1.0.

===v7.2.0===
 * New icon type: Resource Display. Works with Bar and Vertical Bar group display methods to show the amount of health, mana, etc. that some unit has.
 * The Multi-state Cooldown icon type is gone - Spell Cooldown icons can replicate its functionality.
 
 * Combat Event icons can now be group controllers, filling up a group with each event captured.
 * Buff/Debuff icons can now explicity set which variable they want to look at for the "Show variable text" option.
 * All icons are now hidden when you are at the barber shop.
 * The combo point condition now only checks your target (so you can't try to check "player", which doesn't work).

 * New condition: Item has on use effect
 * New notification handler: Timer. Manipulates a stopwatch-style timer when it is triggered.

 * IMPORTANT: The Buff/Debuff Duration Percent conditions are being phased out because they are deceiving.
 ** In Warlords of Draenor, the point at which you can refresh a buff/debuff without clipping any of the existing duration is at 30% of the BASE DURATION of the effect - not 30% the current duration.
 ** Using these conditions to check when a buff/debuff has less than 30% remaining is bad practice, because if you refresh at 30% remaining of an already extended aura, you are going to clip some of it.
 ** Instead, you should manually calculate 30% of the base duration of what you want to check, and compare against that value in a regular Buff/Debuff Duration condition.

====Bug Fixes====
 * Fixed range checking for multiple icon types (notably Multistate cooldowns, but also others).
 * Blood Pact should now have the correct ID in the BonusStamina equivalency.
 * Various tooltips now reflect that the game client once again supports MP3s.
 * Fixed an issue that was breaking conditions that reference other icons.