@@ -5,6 +5,7 @@ TMW.CHANGELOG = {
 [==[===v7.2.1===]==],
 [==[====Bug Fixes====]==],
 [==[* Fixed incorrect DR categories after changes made to DRData-1.0.]==],
+[==[* Rage (and perhaps other powers) should no longer be multipled by 10 in the Resource Display icon type.]==],
 [==[]==],
 [==[===v7.2.0===]==],
 [==[* New icon type: Resource Display. Works with Bar and Vertical Bar group display methods to show the amount of health, mana, etc. that some unit has.]==],
@@ -176,5 +177,61 @@ TMW.CHANGELOG = {
 [==[* The NPC ID condition should now work correctly with npcIDs that are greater than 65535 (0xFFFF).]==],
 [==[* Meta icons should reflect changes in the icons that they are checking that are caused by using slash commands to enable/disable icons while TMW is locked.]==],
 [==[* TellMeWhen no longer registers PLAYER_TALENT_UPDATE - there is a Blizzard big causing this to fire at random for warlocks, and possibly other classes as well, which triggers a TMW:Update() which can cause a sudden framerate drop. PLAYER_SPECIALIZATION_CHANGED still fires for everything that we cared about.]==],
+[==[]==],
+[==[===v6.2.6===]==],
+[==[====Bug Fixes====]==],
+[==[* Added a hack to ElvUI's timer texts so that they will once again obey the setting in TellMeWhen. Previously, they would be enabled for all icons because of a change made by ElvUI's developers.]==],
+[==[* Spell Cooldown icons that are tracking by spellID instead of by name should once again reflect spell charges properly (this functionality was disrupted by a bug introduced by Blizzard in patch 5.4).]==],
+[==[]==],
+[==[===v6.2.5===]==],
+[==[* ElvUI's timer texts are once again supported by TellMeWhen.]==],
+[==[]==],
+[==[===v6.2.4===]==],
+[==[* Added DogTags for string.gsub and string.find.]==],
+[==[* Added Yu'lon's Barrier to the DamageShield equivalency.]==],
+[==[]==],
+[==[====Bug Fixes====]==],
+[==[* IconModule_Alpha/Alpha.lua:84: attempt to index local "IconModule_Alpha" (a nil value)]==],
+[==[* Rune icons will now behave properly when no runes are found that match the types configured for the icon.]==],
+[==[* The Banish loss of control type was accidentally linked to the Fear loss of control type - this has been fixed.]==],
+[==[* Unit cooldown icons should now attempt to show the first usable spell even if no units being checked have casted any spells yet.]==],
+[==[]==],
+[==[===v6.2.3===]==],
+[==[* IMPORTANT: The color settings for all timer bars (including bar group and timer overlay bars) have changed a bit:]==],
+[==[** The labels for these settings now correctly correspond to the state that they will be used for.]==],
+[==[** The colors will automatically switch when you enable the "Fill bar up" setting for a bar.]==],
+[==[** These changes will probably require you to reconfigure some of your settings.]==],
+[==[]==],
+[==[* Icons in groups that use the Bar display method can now have their colors configured on a per-icon basis.]==],
+[==[** You can copy colors between icons by right-click dragging one icon to another.]==],
+[==[]==],
+[==[* TellMeWhen now uses a coroutine-based update engine to help prevent the occasional "script ran too long" error.]==],
+[==[** This version also includes an updated LibDogTag-3.0 and LibDogTag-Unit-3.0 that should no longer throw "script ran too long" errors.]==],
+[==[]==],
+[==[====Bug Fixes====]==],
+[==[* Removed the "Snared" Loss of Control category from the configuration since it is most certainly not used by Blizzard.]==],
+[==[* Item-tracking icons and condition should now always get the correct data once it becomes available.]==],
+[==[]==],
+[==[===v6.2.2===]==],
+[==[* Buff/Debuff icons can now sort by stacks.]==],
+[==[* The group sorting option to sort by duration now treats spells that are on the GCD as having no cooldown.]==],
+[==[]==],
+[==[* Added a few more popup notifications when invalid settings/actions are entered/performed.]==],
+[==[* Icons will now be automatically enabled when you select an icon type.]==],
+[==[* Incorporated LibDogTag-Stats-3.0 into TellMeWhen's various implementations of LibDogTag-3.0.]==],
+[==[* The Mastery condition now uses GetMasteryEffect() instead of GetMastery(). The condition will now be comparable to the total percentage increase granted by mastery instead of the value that has to be multiplied by your spec's mastery coefficient (which is no longer shown in Blizzard's character sheet.)]==],
+[==[* TMWOptDB now uses AceDB-3.0. One benefit of this is that the suggestion list will now always be locale-appropriate.]==],
+[==[* The suggestion list for units is now much more useful.]==],
+[==[* The suggestion list now has a warning in the tooltip when inserting spells that interfere with the names of equivalencies.]==],
+[==[* The suggestion list now pops up a help message the first time it is shown.]==],
+[==[* You can now copy an icon's events and conditions by right-click-dragging the icon to another icon.]==],
+[==[** You can also copy group conditions between groups this way.]==],
+[==[* When right-click-dragging an icon to an icon that has multiple icons in the same place, you can now choose which one you would like the destination to be.]==],
+[==[]==],
+[==[====Bug Fixes====]==],
+[==[* Buff/Debuff icons that are set to sort by low duration should now properly display unlimited duration auras when there is nothing else to display.]==],
+[==[* The Ranged Attack Power condition should now always use the proper RAP value.]==],
+[==[* Fixed some "You are not in a raid group" errors.]==],
+[==[* All features in TellMeWhen that track items (including Item Cooldown icons and any item conditions) are universally able to accept slotIDs as input, and all features will now correctly distinguished equipped items from items in your bag when tracking by slotID. This is the result of a new, robust system for managing items.]==],
 [==[]==],
 }
